PCS BAckup 26Dec2023/Backup-Source/objects/Vision_GCP_SFDC_Profitability_SKU_Level__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Account_Salesforce_Id__c</fullName>
        <label>GCP Account Salesforce Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Number__c</fullName>
        <label>GCP Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Product_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Product Tracker</label>
        <referenceTo>Vision_Customer_Product_Tracker__c</referenceTo>
        <relationshipLabel>GCP SFDC Profitability SKU Level</relationshipLabel>
        <relationshipName>GCP_SFDC_Profitability_SKU_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP SFDC Profitability SKU Level</relationshipLabel>
        <relationshipName>GCP_SFDC_Profitability_SKU_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Month_DtLs__c</fullName>
        <label>GCP Month DtLs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_NPR_Customer_Code__c</fullName>
        <label>GCP NPR Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP SFDC Profitability SKU Level</relationshipLabel>
        <relationshipName>GCP_SFDC_Profitability_SKU_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>GCP SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_Dollar__c</fullName>
        <label>GCP Sales Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>GCP Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_Dollar__c</fullName>
        <label>GCP TPT Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_TPT_PCT__c</fullName>
        <label>GCP TPT PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Units__c</fullName>
        <label>GCP Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_Date__c</fullName>
        <label>GCP Updated Date</label>
        <type>Date</type>
    </fields>
    <label>GCP SFDC Profitability SKU Level</label>
    <nameField>
        <displayFormat>Pro-SKU-Level-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP SFDC Profitability SKU Level</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>